Edge Slide with X Mirror doesn't preserve UVs #45458

Closed
opened 2015-07-16 14:56:56 +02:00 by Amon Kalagin · 8 comments

UVs get stretched on the mirrored side of the model if you slide a vertex / Edge(double tapping g).
(Sorry if this is a double post, couldn't find a newer one)

UVs get stretched on the mirrored side of the model if you slide a vertex / Edge(double tapping g). (Sorry if this is a double post, couldn't find a newer one)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscribers: @zanqdo, @theeth, @ideasman42, @AmonKalagin

Added subscribers: @zanqdo, @theeth, @ideasman42, @AmonKalagin
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

please tell us what blender version you are using also please post a simple .blend that shows the issue

please tell us what blender version you are using also please post a simple .blend that shows the issue

This issue was referenced by 9dc9f84740

This issue was referenced by 9dc9f84740d2ebb39b2981cd2959c523e6e42dbe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Ok, i'm using the official 2.75 build and the edge slide, while correct uvs is on only corrects one side e.g. in this file i have made a simple cube with an edge on both sides, turned x mirror on and slided it up a bit. then turned on the correct uv's option and it properly corrected one side, but the other stayed stretched:
https://www.dropbox.com/s/hs2z6u8fjsjmena/Edgeslide_problem.blend?dl=0
it should have a texture applied, but maybe you'll need to apply one again^^

Ok, i'm using the official 2.75 build and the edge slide, while correct uvs is on only corrects one side e.g. in this file i have made a simple cube with an edge on both sides, turned x mirror on and slided it up a bit. then turned on the correct uv's option and it properly corrected one side, but the other stayed stretched: https://www.dropbox.com/s/hs2z6u8fjsjmena/Edgeslide_problem.blend?dl=0 it should have a texture applied, but maybe you'll need to apply one again^^
Author

Oh wow, i didn't see you already resolved it:D Thumbs up:)

Oh wow, i didn't see you already resolved it:D Thumbs up:)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45458
No description provided.