Fix T45458: Edge Slide Mirror doesn't preserve UVs